--- a/index.html
+++ b/index.html
@@ -117,16 +117,9 @@
             </a>
         </div>
     </section>
-    <main id="testimonials">
+    <section id="testimonials">
         <div id="testimonials_header">
             <h1>Avaliações</h1>
-            <h2>
-                O que os clientes dizem
-            </h2>
-            <p>
-                Quer saber o que torna a nossa marca tão especial?
-                Confira o que nossos clientes têm a dizer!
-            </p>
         </div>
 
         <div class="swiper">
@@ -245,7 +238,7 @@
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
-    </main>
+    </section>
 
     <section class="faq-section" id="faq">
         <div class="faq-container">
