--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500;600;700&family=Lato:wght@300;400;500;700&display=swap"
+        rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css" integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+        integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+        crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css" />
     <title>NFC Advogados</title>
 </head>
@@ -15,7 +22,7 @@
     <header id="navbar">
         <div class="navbar-container">
             <a href="#" id="logo-link">
-                <img src="/assets/logo.png" alt="Logo" class="logo" />
+                <img src="/assets/logo.png" alt="Logo" class="logo" loading="lazy" />
             </a>
             <nav>
                 <ul>
@@ -139,7 +146,8 @@
                     </div>
 
                     <blockquote class="testimonial-quote">
-                        "Atendimento sensacional! Me explicaram tudo com calma, tiraram minhas dúvidas e sempre responderam rápido. Dá pra ver que realmente se importam com a gente."
+                        "Atendimento sensacional! Me explicaram tudo com calma, tiraram minhas dúvidas e sempre
+                        responderam rápido. Dá pra ver que realmente se importam com a gente."
                     </blockquote>
                 </div>
                 <div class="swiper-slide">
@@ -157,7 +165,8 @@
                     </div>
 
                     <blockquote class="testimonial-quote">
-                        "Achei o escritório por indicação e foi a melhor escolha que fiz. Gente boa, transparente e super eficiente. Resolveram meu caso rapidinho!"
+                        "Achei o escritório por indicação e foi a melhor escolha que fiz. Gente boa, transparente e
+                        super eficiente. Resolveram meu caso rapidinho!"
                     </blockquote>
                 </div>
                 <div class="swiper-slide">
@@ -175,7 +184,8 @@
                     </div>
 
                     <blockquote class="testimonial-quote">
-                        "A NFC me ajudou em um momento complicado, e hoje só tenho gratidão. Atendimento top, sempre com atenção e cuidado."
+                        "A NFC me ajudou em um momento complicado, e hoje só tenho gratidão. Atendimento top, sempre com
+                        atenção e cuidado."
                     </blockquote>
                 </div>
                 <div class="swiper-slide">
@@ -193,7 +203,8 @@
                     </div>
 
                     <blockquote class="testimonial-quote">
-                        "Me senti super acolhida! Eles tratam a gente com muito respeito e empatia. Diferente de qualquer outro escritório que já fui."
+                        "Me senti super acolhida! Eles tratam a gente com muito respeito e empatia. Diferente de
+                        qualquer outro escritório que já fui."
                     </blockquote>
                 </div>
                 <div class="swiper-slide">
@@ -211,7 +222,8 @@
                     </div>
 
                     <blockquote class="testimonial-quote">
-                        "Equipe excelente! Sempre muito atenciosos e profissionais. Fizeram tudo de forma rápida e com resultado melhor do que eu esperava."
+                        "Equipe excelente! Sempre muito atenciosos e profissionais. Fizeram tudo de forma rápida e com
+                        resultado melhor do que eu esperava."
                     </blockquote>
                 </div>
                 <div class="swiper-slide">
@@ -229,12 +241,13 @@
                     </div>
 
                     <blockquote class="testimonial-quote">
-                        "Mesmo sendo de outro estado, fui muito bem atendida. Fizeram tudo online e me deixaram segura do início ao fim."
+                        "Mesmo sendo de outro estado, fui muito bem atendida. Fizeram tudo online e me deixaram segura
+                        do início ao fim."
                     </blockquote>
                 </div>
             </div>
             <div class="swiper-pagination"></div>
-        
+
             <div class="swiper-button-prev"></div>
             <div class="swiper-button-next"></div>
         </div>
@@ -365,7 +378,7 @@
         </a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
-    <script src="script.js"></script>
+    <script type="module" src="./js/main.js" defer></script>
 </body>
 
 </html>
