--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
 
     <section class="hero" id="hero">
         <div class="hero-content hidden">
-            <h1>Conheça a <span>NFC Advogados Associados</span>, referência em consultoria para advocacia com mais de 40
-                escritórios atendidos por todo o Brasil. Além de termos mais de 2.000 processos protocolados.</h1>
-            <p>Na NFC Advogados Associados, alinhamos estratégia, experiência e acompanhamento personalizado, cuidando
-                tanto do crescimento do escritório quanto da sua segurança jurídica.</p>
+            <h1>Conheça a <span>NFC Advogados Associados</span>, um escritório que já contribuiu com mais de 2.000
+                processos protocolados em todo o Brasil.
+                <i>Resultado de uma atuação sólida, técnica e comprometida com cada cliente.</i>
+            </h1>
+            <p>Nossa equipe atua de forma personalizada, oferecendo acompanhamento jurídico estratégico para que você
+                tenha segurança e tranquilidade em cada etapa do seu caso.</p>
             <a href="https://wa.me/5519996063126" target="_blank" class="cta-button" rel="noopener noreferrer">Fale
                 Conosco</a>
         </div>
@@ -80,12 +82,15 @@
         <div class="consulting-container hidden">
             <h2>Consultoria e Acompanhamento Jurídico</h2>
             <p>
-                Nossa atuação abrange tanto advogados quanto clientes. Para advogados,
-                fornecemos ferramentas estratégicas e insights para crescimento do
-                escritório, captação de novos cases e otimização de processos internos.
-                Para clientes, garantimos orientação detalhada em cada etapa do processo,
-                esclarecendo dúvidas, minimizando riscos e assegurando que cada decisão
-                seja tomada com total segurança jurídica.
+                Na NFC Advogados Associados, cada caso é tratado de forma individual e estratégica. Nosso objetivo é
+                garantir que você compreenda cada passo do processo e tenha total segurança nas decisões tomadas.
+            </p>
+            <p>
+                Atuamos em diversas áreas do Direito, sempre com clareza, transparência e foco em resultados reais.
+            </p>
+            <p>
+                Mais do que um escritório de advocacia, somos um parceiro jurídico de confiança, pronto para orientar,
+                esclarecer dúvidas e proteger seus direitos com o máximo de eficiência.
             </p>
         </div>
     </section>
