--- a/index.html
+++ b/index.html
@@ -348,7 +348,11 @@
                 <h3>Localização</h3>
                 <p>
                     <i class="bi bi-geo-alt"></i>
-                    Rua Barão de Jaguara, 1481 - Edifício Cruz Alta - Sala 114
+                    Rua Barão de Jaguara, 1481 - Sala 114 - Centro, Campinas - SP, 13015-910
+                </p>
+                <p>
+                    <i class="bi bi-geo-alt"></i>
+                    R. Barroso, 758 - Centro (Sul), Teresina - PI, 64001-130
                 </p>
             </div>
 
