--- a/index.html
+++ b/index.html
@@ -360,7 +360,7 @@
                 <h3>Informações para Contato</h3>
                 <p>
                     <i class="bi bi-instagram"></i>
-                    <a href="https://www.instagram.com/nfc.adv?igsh=MW1rMmwyaml4ZThhdg==" target="_blank">Instagram</a>
+                    <a href="https://www.instagram.com/nfc.adv?igsh=MW1rMmwyaml4ZThhdg==" target="_blank">nfc.adv</a>
                 </p>
                 <p>
                     <i class="bi bi-whatsapp"></i>
@@ -368,7 +368,7 @@
                 </p>
                 <p>
                     <i class="bi bi-envelope"></i>
-                    <a href="mailto:">email</a>
+                    <a href="mailto:ncardozo.adv@gmail.com">ncardozo.adv@gmail.com</a>
                 </p>
             </div>
         </div>
